# numav

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Manifest.toml  Project.toml  README.md  docker-compose.yml  entrypoint.sh  hello-world.jl  how-to-build.txt  how-to-get-win-julia.txt  license.txt  main.cpp  mesh.bdf  mesh.geo  mingw_toolchain.cmake  readme.md  start_container.sh
.devcontainer/: Dockerfile  devcontainer.json  initialize.sh
.github/workflows/: TagBot.yml  documentation.yml
bindings/julia/: CMakeLists.txt  Numav.jl  build_tarballs.jl  generate_override.jl  no_binary_builder  no_binary_builder.jl  numav.jl  numav_jl.cpp  numav_julia.cpp
bindings/julia/Numav/: Project.toml  license.txt
bindings/julia/Numav/src/: Numav.jl
dev/: .documenter-siteinfo.json  credits.html  fdpq.html  fem-helmholtz.html  index.html  license.html  objects.inv
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  start-container.sh  start_container.sh
examples/: CMakeLists.txt  example1.cpp  example1.geo  example1.jl  mesh1.geo
functions/: create_edge_points_for_quadratic_elements!.jl  get_index_of_closest_node.jl  get_maximum_freq_allowed.jl  read_bdf.jl
include/: ac-fem-freq-d3.hpp  logger.hpp  numav.hpp  typedefs.hpp
include/numav/: aliases.hpp  debug-macros.hpp  numav.hpp  typedefs.hpp
include/numav/modules/: ac-fem-freq-d3.hpp  fem-helmholtz.hpp
include/numav/modules/fem/: fem.hpp
include/numav/modules/fem/helmholtz/: compile-options.hpp  helmholtz.hpp
julia-bindings/: build_tarballs.jl  generate_override.jl  numav_jl.cpp  numav_julia.cpp
julia-bindings/Numav/: Project.toml
julia-bindings/Numav.jl/: Manifest.toml  Project.toml  license.txt  readme.md
julia-bindings/Numav.jl/docs/: Project.toml  make.jl  preview.jl
julia-bindings/Numav.jl/docs/src/: credits.md  fdpq.md  fem-helmholtz.md  index.md  license.md
julia-bindings/Numav.jl/docs/src/assets/: custom.css
julia-bindings/Numav.jl/src/: Numav.jl  cpp.jl  fem-helmholtz.jl  frequency.jl  mesh.jl  options.jl  simulation.jl  utils.jl
julia-bindings/Numav.jl/src/fem/: fem.jl
julia-bindings/Numav.jl/src/fem/helmholtz/: helmholtz.jl
julia-bindings/Numav.jl/test/: pqv.txt  runtests.jl  test1.bdf  test1.geo  test1.jl
julia-bindings/Numav/src/: Numav.jl
julia-bindings/override/share/licenses/numav_julia/: license.txt
julia-bindings/tests/: pqv.txt  test1.jl
julia-experiments/examples/: example1.jl
julia-experiments/src/: Analytic.jl  FemFreq3d.jl  MeshProcessing.jl  Solver.jl
julia_bindings/: build_tarballs.jl  generate_override.jl  numav_jl.cpp  target-platforms.txt  test1.jl
julia_bindings/Numav/: Project.toml  license.txt
julia_bindings/Numav/src/: Numav.jl
quadratic-elements/: mesh.geo  quadratic-elements.jl
quadratic-elements/functions/: calculate_modes.jl  create_edge_points_for_quadratic_elements!.jl
simulations/: CMakeLists.txt  README.md
simulations/sala_config_01_vazia_PRATO/: CMakeLists.txt  README.md
simulations/sala_config_04_PRATO/: CMakeLists.txt  README.md
simulations/sala_config_04_PRATO/inputs/: Zs_DBMiki_sigma3714_L15cm.txt  sala_config_4.cpp  velocidade_sub_woofer.csv
simulations/sala_config_04_PRATO/post_processing/: plots_simulations.m
simulations/sala_config_05_PRATO/: CMakeLists.txt  README.md  main.cpp
simulations/sala_config_05_PRATO/inputs/: Zs_DBMiki_sigma3714_L50mm.txt  sala_config_5.cpp
simulations/sala_config_06_PRATO/: CMakeLists.txt  README.md
simulations/sala_config_07_PRATO/: CMakeLists.txt  README.md
src/: CMakeLists.txt  ac-fem-freq-d3.cpp  numav.cpp
src/common/: aliases.hpp  debug-macros.hpp  exception.hpp  hash-functions.cpp  hash-functions.hpp  hash_functions.hpp  hdf5.cpp  hdf5.hpp  log.cpp  log.hpp  maths.cpp  maths.hpp  nmvr-format.cpp  nmvr-format.hpp  nmvr_format.hpp  utils.cpp  utils.hpp
src/modules/ac-fem-freq-d3/: ac-fem-freq-d3.cpp  analytic-integration.hpp  compile-options.hpp  constants.hpp  core.cpp  count.cpp  eigen-solver.cpp  eigen-solver.hpp  freq-indep-assembly.cpp  freq-vector.cpp  gauss-quadrature.hpp  glossary.md  hdf5.cpp  impl.hpp  ldlt-solver-solver.cpp  ldlt-solver-solver.hpp  macros.hpp  mesh-processing.cpp  nmvr-format.cpp  nmvr-format.txt  onemkl-solver.cpp  onemkl-solver.hpp  physical-group-data.cpp  post-process.cpp  public-interface.cpp  public-methods.cpp  ruleof5.cpp  run.cpp  shape-functions.cpp  shape-functions.hpp  simulation.cpp  solve-systems.cpp  solver-eigen.cpp  solver-internal.cpp  solver-mumps.cpp  solver-onemkl.cpp  user-input.cpp
src/modules/ac-fem-freq-d3/result/: result.cpp
src/modules/ac-fem-freq-d3/simulation/: count.cpp  implementation.cpp  implementation.hpp  mesh-processing.cpp  public-interface.cpp  ruleof5.cpp  run.cpp  simulation.cpp  user-input.cpp
src/modules/ac-fem-freq-d3/simulation/impl/: count.cpp  impl.hpp  mesh-processing.cpp  ruleof5.cpp  run.cpp  user-input.cpp
src/modules/fem-helmholtz/: analytic-integration.hpp  constants.hpp  fem-helmoltz.cpp  freq-indep-assembly.cpp  freq-vector.cpp  gauss-quadrature.hpp  glossary.md  hdf5.cpp  impl.hpp  macros.hpp  mesh-processing.cpp  physical-group-data.cpp  post-process.cpp  public-methods.cpp  ruleof5.cpp  shape-functions.cpp  shape-functions.hpp  solve-systems.cpp  solver-eigen.cpp  solver-internal.cpp  solver-mumps.cpp  solver-onemkl.cpp
tests/: CMakeLists.txt  plot-frf.jl  plot_frf.jl  test1.bdf  test1.cpp  test1.geo
utils/: read_nmvr.jl  read_nmvr.m
v0.2.3/: .documenter-siteinfo.json  credits.html  fdpq.html  fem-helmholtz.html  index.html  license.html  search_index.js
